--- a/Project2/SFParkExplorer/app/src/main/AndroidManifest.xml
+++ b/Project2/SFParkExplorer/app/src/main/AndroidManifest.xml
@@ -8,16 +8,21 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
         <activity android:name=".SearchBySizeResultsActivity" />
         <activity android:name=".DetailsActivity" />
-        <activity android:name=".FavoritesActivity"/>
         <activity android:name=".SearchByBusynessResultsActivity"/>
         <activity android:name=".SearchByCleanlinessActivity"/>
         <activity android:name=".SearchByFavoritesActivity">
